--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -5,7 +5,6 @@
   -->
 
 <resources>
-    <string name="app_name">RobuxEarny</string>
     <string name="welcome">ようこそ！</string>
     <string name="welcome_desc">\nRobuxEarnyへようこそ！\n短期間でRobuxを稼ぐためのアプリです！\n簡単なミニゲームをやったらすぐ稼げます、\nこのアプリは完全に無料で色んなミニゲームをやることでたくさんのRobuxを稼ぐことが出来ます！\n</string>
     <string name="coinsystem">コインシステム</string>
@@ -86,4 +85,7 @@
     <string name="refcode_desc">紹介コードをお持ちの場合、こちらに入力してボーナスを受け取るために使用してください！</string>
     <string name="i_don_t_have_a_code">コードは持っていません</string>
     <string name="saved">コインが保存されました！</string>
+    <string name="survey_desc">アンケートを完了し、獲得したRobuxに対応するコインがRobux Earnyアカウントに追加されます！</string>
+    <string name="earn_faster">もっと稼ぐ</string>
+    <string name="current_coins">現在のコイン：%d</string>
 </resources>
