--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,7 +5,6 @@
   -->
 
 <resources>
-    <string name="app_name">RobuxEarny</string>
     <string name="welcome">¡Bienvenido!</string>
     <string name="welcome_desc">\n¡Bienvenido a RobuxEarny! Una aplicación donde puedes ganar Robux sin esfuerzo.\nSolo necesitas jugar algunos juegos sencillos, ¡es completamente gratis y podrás canjear tus Robux acumulando monedas!\n</string>
     <string name="coinsystem">Sistema de Monedas</string>
@@ -89,4 +88,7 @@
     <string name="refcode_desc">Si tienes un código de referencia, escríbelo aquí para recibir un bono.</string>
     <string name="i_don_t_have_a_code">No tengo un código</string>
     <string name="saved">¡Monedas ahorradas!</string>
+    <string name="survey_desc">¡Completa encuestas y las monedas correspondientes a los Robux ganados se agregarán a tu cuenta de Robux Earny!</string>
+    <string name="earn_faster">Gana Más</string>
+    <string name="current_coins">Monedas Actuales: %d</string>
 </resources>
