--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -83,4 +83,5 @@
     <string name="survey_desc">Completa i sondaggi e le monete corrispondenti ai Robux guadagnati verranno aggiunte al tuo account Robux Earny!</string>
     <string name="earn_faster">Guadagna di più</string>
     <string name="current_coins">Monete Attuali: %d</string>
+    <string name="invalid_link">Inserisci un link valido, per favore.</string>
 </resources>
