--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -89,4 +89,6 @@
     <string name="earn_faster">Ganhe Mais</string>
     <string name="current_coins">Moedas Atuais: %d</string>
     <string name="invalid_link">Por favor, insira um link válido.</string>
+    <string name="ad_load_fail">O anúncio não conseguiu carregar, por favor pressione o botão novamente.</string>
+    <string name="login_with_google">Login With Google</string>
 </resources>
