--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -91,4 +91,7 @@
     <string name="invalid_link">有効なリンクを入力してください。</string>
     <string name="ad_load_fail">広告の読み込みに失敗しました、ボタンを再度押してください。</string>
     <string name="login_with_google">Googleでログイン</string>
+    <string name="boosters">ブースター</string>
+    <string name="buy">購入する</string>
+    <string name="price2">値段: %s</string>
 </resources>
