--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="share">Share your code</string>
     <string name="enter_referral_code">Enter Referral Code</string>
     <string name="login_success">Login Success!</string>
-    <string name="ref_desc">Earn 200 coins every time somebody uses your referral code!</string>
+    <string name="ref_desc">Earn 600 coins every time somebody uses your referral code!</string>
     <string name="login_error">Login error, please try again</string>
     <string name="robuxearny_referral_code">RobuxEarny Referral Code</string>
     <string name="robuxearny_referral_desc">"This is my RobuxEarny's referral code: %s, download the app from Google Play and get a coin bonus!"</string>
@@ -102,4 +102,10 @@
     <string name="login_with_google">Login with Google</string>
     <string name="boosters">Boosters</string>
     <string name="buy">Buy</string>
+    <string name="boost">Booster successfully purchased!</string>
+    <string name="five_star_review">Leave a 5 star review!</string>
+    <string name="logo">Logo</string>
+    <string name="close">Close</string>
+    <string name="review">Review</string>
+    <string name="review_message">Help us improve our app by rating us 5 stars on the Play Store! In return, you\'ll receive 350 coins!</string>
 </resources>
