--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -100,4 +100,7 @@
     <string name="close">閉じる</string>
     <string name="review">評価する</string>
     <string name="review_message">Play ストアで5つ星評価をして、当社のアプリの向上にご協力ください。 その見返りに、350コインをプレゼントします！</string>
+    <string name="save_coins_title">コインを保存する</string>
+    <string name="save_coins_desc">コインを保存するためには、広告動画を見る必要があります、続けるには動画を観てください。</string>
+    <string name="save_coins_continue">続ける</string>
 </resources>
